--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -3,6 +3,11 @@
     justify-content: space-between;
     padding-top: calc(var(--mantine-spacing-xl) * 4);
     padding-bottom: calc(var(--mantine-spacing-xl) * 4);
+
+    @media (max-width: $mantine-breakpoint-md) {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
 
 .content {
